# copacity

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  patch_sdl_ttf_recipe-first-attempt.sh  patch_sdl_ttf_recipe-second-attempt.sh
.devcontainer/: Dockerfile  devcontainer.json
conan/profiles/: windows
profiles/: linux  windows
src/: Bar.cpp  Foo.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: Bar.cpp  Bar.hpp  CMakeLists.txt  FixedPoint.h  Foo.cpp  Foo.h  Types.h  Types.hpp
src/core/ecs/: Registry.h  Registry.hpp  Systems.h
src/core/gfx/: Assets.cpp  Assets.h  Assets.hpp  Context.cpp  Context.h  DrawCall.h  DrawCall.hpp  DrawCallQueue.cpp  DrawCallQueue.h  DrawCallQueue.hpp  Font.hpp  FontLoader.hpp  ImageData.h  ImageLoader.hpp  Init.cpp  Init.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipeline.hpp  RenderSystem.cpp  RenderSystem.h  Renderer.h  Renderer.hpp  Window.h  Window.hpp
src/core/input/: Input.hpp
src/game/: Assets.cpp  Assets.h  CMakeLists.txt  Game.cpp  Game.h  Game.hpp  SDLContext.cpp  SDLContext.h  TileBasis.h
src/game/components/: Animation.h  Building.hpp  Camera.h  GridDimension.hpp  GridPosition.h  Input.h  Map.hpp  NavMap.h  NavMap.hpp  Player.h  Position.h  PreviousGridPosition.hpp  RenderLayer.hpp  Sprite.h  Sprite.hpp  SpriteSheet.h  SpriteSheet.hpp  Text.hpp  Texture.h  Texture.hpp  TextureAtlas.hpp  TextureTileMap.h  Tile.h  Tile.hpp  TileMap.h  TileMap.hpp  Transform.h  Velocity.hpp  Walker.h  Walker.hpp
src/game/systems/: AnimationSystem.h  AnimationSystem.hpp  CameraSystem.cpp  CameraSystem.h  CameraSystem.hpp  InputSystem.cpp  InputSystem.h  MovementSystem.h  MovementSystem.hpp  PlayerControlSystem.h  PrintFpsSystem.h  PrintFpsSystem.hpp  RenderNavMapSystem.cpp  RenderNavMapSystem.h  RenderNavMapSystem.hpp  RenderSpriteSheetSystem.cpp  RenderSpriteSheetSystem.h  RenderSpriteSheetSystem.hpp  RenderSystem.cpp  RenderSystem.h  RenderTextSystem.hpp  RenderTileMapSystem.cpp  RenderTileMapSystem.h  RenderTileMapSystem.hpp  Tilemap2DRenderSystem.cpp  Tilemap2DRenderSystem.h  Tilemap2DRenderSystem.hpp  WalkerSystem.cpp  WalkerSystem.h  WalkerSystem.hpp
src/platform/sdl/: Assets.cpp  Assets.h  CMakeLists.txt  Font.cpp  Font.hpp  FontLoader.cpp  FontLoader.hpp  Init.cpp  Init.h  Init.hpp  Input.cpp  Input.h  Input.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Window.cpp  Window.h  Window.hpp
src/platform/stb/: Assets.cpp  Assets.hpp  CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp
src/wfc/: CMakeLists.txt  Constraint.hpp  SudokuConstraint.cpp  SudokuConstraint.hpp  Wfc.cpp  Wfc.hpp
test/: CMakeLists.txt
test/core/: BarTest.cpp  CMakeLists.txt  FixedPointTest.cpp  FooTest.cpp
test/core/mocks/: BarMock.hpp
test/wfc/: CMakeLists.txt  SudokuTest.cpp
tests/: BarTest.cpp  FooTest.cpp
tests/core/: BarTest.cpp  FooTest.cpp
tests/core/mocks/: BarMock.h
tests/mocks/: BarMock.h
